--- a/html/1.3 sponzori.html
+++ b/html/1.3 sponzori.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		
-		<title>FF - Kontakt</title>
+		<title>FF - Sponzori</title>
 		<link rel="icon" href="../images/circle-logo.png">
 	
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
@@ -29,8 +29,8 @@
 				</div>
 				<div class="col-8 col-lg-10">
 					<br>
-					<h1 style="color:white;">Filmski festival</h1>
-					<h1 style="color:white;" >6.5-10.5</h1>
+					<h1 style="color:white; ">Filmski festival</h1>
+					<h3 style="color:white; " >1.6-2.6</h3>
 				</div>
 		</header>		
 				
@@ -50,7 +50,7 @@
 				<div class="collapse navbar-collapse navbar-center" id="collapsibleNavbar">
 					<ul class="navbar-nav mx-auto">
 						<li class="nav-item">
-							<a class="nav-link" href="index.html" ><h3>Pocetna</h3></a>
+							<a class="nav-link a-link" href="index.html" ><h3>Početna</h3></a>
 						</li>
 						
 						<li class="nav-item dropdown">
@@ -68,9 +68,6 @@
 								 <a class="dropdown-item" href="2.1 filmovi.html">			<img src="../images/dropdown-icons/film-icon.png" width="25px">Filmovi</a>
 								 <a class="dropdown-item" href="2.2 mesta_projekcija.html">	<img src="../images/dropdown-icons/place-icon.png" width="25px">Mesta projekcija</a>
 								 <a class="dropdown-item" href="2.3 prodajna_mesta.html">	<img src="../images/dropdown-icons/ticket-icon.png" width="25px">Prodajna mesta</a>
-								 <a class="dropdown-item" href="2.4 prvidan.html">			<img src="../images/dropdown-icons/day1.png" width="25px">&nbsp;Dan</a>
-								 <a class="dropdown-item" href="2.5 drugidan.html"> 		<img src="../images/dropdown-icons/day2.png" width="25px">&nbsp;Dan</a>
-								 <a class="dropdown-item" href="2.6 trecidan.html"> 		<img src="../images/dropdown-icons/day3.png" width="25px">&nbsp;Dan</a>
 							</div>
 						</li>
 						<li class="nav-item">
@@ -78,6 +75,9 @@
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="4 vesti.html"><h3>Vesti</h3></a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="5 mojifilmovi.html"><h3>Moji filmovi</h3></a>
 						</li>
 					</ul>
 				</div> 
