--- a/html/2.1 filmovi.html
+++ b/html/2.1 filmovi.html
@@ -30,8 +30,8 @@
 				</div>
 				<div class="col-8 col-lg-10">
 					<br>
-					<h1 style="color:white;">Filmski festival</h1>
-					<h1 style="color:white;" >6.5-10.5</h1>
+					<h1 style="color:white; ">Filmski festival</h1>
+					<h3 style="color:white; " >1.6-2.6</h3>
 				</div>
 		</header>		
 				
@@ -51,7 +51,7 @@
 				<div class="collapse navbar-collapse navbar-center" id="collapsibleNavbar">
 					<ul class="navbar-nav mx-auto">
 						<li class="nav-item">
-							<a class="nav-link" href="index.html" ><h3>Pocetna</h3></a>
+							<a class="nav-link a-link" href="index.html" ><h3>Početna</h3></a>
 						</li>
 						
 						<li class="nav-item dropdown">
@@ -66,12 +66,9 @@
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" id="program-dd" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="program.html"><h3>Program</h3></a>
 							<div class="dropdown-menu" aria-labelledby="program-dd">
-								 <a class="dropdown-item selected" href="2.1 filmovi.html">			<img src="../images/dropdown-icons/film-icon.png" width="25px">Filmovi</a>
-								 <a class="dropdown-item" href="2.2 mesta_projekcija.html">	<img src="../images/dropdown-icons/place-icon.png" width="25px">Mesta projekcija</a>
-								 <a class="dropdown-item" href="2.3 prodajna_mesta.html">	<img src="../images/dropdown-icons/ticket-icon.png" width="25px">Prodajna mesta</a>
-								 <a class="dropdown-item" href="2.4 prvidan.html">			<img src="../images/dropdown-icons/day1.png" width="25px">&nbsp;Dan</a>
-								 <a class="dropdown-item" href="2.5 drugidan.html"> 		<img src="../images/dropdown-icons/day2.png" width="25px">&nbsp;Dan</a>
-								 <a class="dropdown-item" href="2.6 trecidan.html"> 		<img src="../images/dropdown-icons/day3.png" width="25px">&nbsp;Dan</a>
+								 <a class="dropdown-item selected" href="2.1 filmovi.html">		<img src="../images/dropdown-icons/film-icon.png" width="25px">Filmovi</a>
+								 <a class="dropdown-item" href="2.2 mesta_projekcija.html">		<img src="../images/dropdown-icons/place-icon.png" width="25px">Mesta projekcija</a>
+								 <a class="dropdown-item" href="2.3 prodajna_mesta.html">		<img src="../images/dropdown-icons/ticket-icon.png" width="25px">Prodajna mesta</a>
 							</div>
 						</li>
 						<li class="nav-item">
@@ -80,11 +77,13 @@
 						<li class="nav-item">
 							<a class="nav-link" href="4 vesti.html"><h3>Vesti</h3></a>
 						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="5 mojifilmovi.html"><h3>Moji filmovi</h3></a>
+						</li>
 					</ul>
 				</div> 
 			</nav>
 		<!--Uniform----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
-
 
 		
 		<div class="container" style="padding-top:20px;">
@@ -96,98 +95,143 @@
 						<br>
 				</div>
 				<div class="col-12 col-md-6">
-						<!--CARD 2.1-->
-					    <div class="example-2 card">
-					      <div class="wrapper"  style="background-image: url('../images/filmovi/film1.jpg');background-repeat:no-repeat; background-size:cover;background-position:center">
-					        <div class="header">
-					          <div class="trajanje">
-					            <span>Trajanje: 122’ </span>
-					          </div>
-					          <ul class="menu-content">
-					            <li><a href="#" class="fa fa-heart-o"></a></li>
-					          </ul>
-					        </div>
-					        <div class="data">
-					          <div class="content">
-					            <span class="author">Dan Gilroy</span>
-					            <h1 class="title"><a href="#">Advokat</a></h1>
-					            <p class="text"> <strong> Uloge:</strong> Denzel Washington, Colin Farrell, Carmen Ejogo</p>
-					            <a href="#" class="button">Prikazi vise</a>
-					          </div>
-					        </div>
-					      </div>
-					    </div>
+					<!--CARD 2.1-->
+				    <div class="example-2 card">
+				      <div class="wrapper"  style="background-image: url('../images/filmovi/film1.jpg');background-repeat:no-repeat; background-size:cover;background-position:center">
+				        <div class="header">
+				          <div class="trajanje">
+				            <span style="color:white">Trajanje: 142’ </span>
+				          </div>
+				          <ul class="menu-content">
+				            <li><a href="#" class="fa fa-bookmark-o"><span id="film_rez_1">2</span></a></li>
+				          </ul>
+				        </div>
+				        <div class="data">
+				          <div class="content">
+				            <span class="author">Ruben Östlund</span>
+				            <h1 class="title"><a href="2.1.1 film.html">Skver</a></h1>
+				            <p class="text"> <strong> Uloge:</strong> Claes Bang, Elisabeth Moss, Dominic West, Terry Notary</p>
+				            <a href="2.1.1 film.html" class="button">Prikaži više</a>
+				          </div>
+				        </div>
+				      </div>
+				    </div>
 				</div>
 				<div class="col-12 col-md-6">
-					    <!--CARD 2.2-->
-					    <div class="example-2 card">
-					      <div class="wrapper"  style="background-image: url('../images/filmovi/film2.jpg');background-repeat:no-repeat; background-size:cover;background-position:center">
-					        <div class="header">
-					          <div class="trajanje">
-					            <span>Trajanje: 104’ </span>
-					          </div>
-					          <ul class="menu-content">
-					            <li><a href="#" class="fa fa-heart-o"></a></li>
-					          </ul>
-					        </div>
-					        <div class="data">
-					          <div class="content">
-					            <span class="author">Branko Schmidt</span>
-					            <h1 class="title"><a href="#">Agape</a></h1>
-					            <p class="text"> <strong> Uloge:</strong> Goran Bogdan, Pavle Čemerikić, Denis Murić, Ivo Gregurević</p>
-					            <a href="#" class="button">Prikazi vise</a>
-					          </div>
-					        </div>
-					      </div>
-					    </div>
+				    <!--CARD 2.2-->
+				    <div class="example-2 card">
+				      <div class="wrapper"  style="background-image: url('../images/filmovi/film2.jpg');background-repeat:no-repeat; background-size:cover;background-position:center">
+				        <div class="header">
+				          <div class="trajanje">
+				            <span style="color:white">Trajanje: 115’ </span>
+				          </div>
+				          <ul class="menu-content">
+				            <li><a href="#" class="fa fa-bookmark-o"><span id="film_rez_2">2</span></a></li>
+				          </ul>
+				        </div>
+				        <div class="data">
+				          <div class="content">
+				            <span class="author">Martin McDonagh</span>
+				            <h1 class="title"><a href="2.1.2 film">Tri Bilborda ispred Ebinga u Misuriju</a></h1>
+				            <p class="text"> <strong> Uloge:</strong> Frances McDormand, Woody Harrelson, Sam Rockwell, Peter Dinklage</p>
+				            <a href="2.1.2 film.html" class="button">Prikaži više</a>
+				          </div>
+				        </div>
+				      </div>
+				    </div>
 				</div>
 				<div class="col-12 col-md-6">
-					    <!--CARD 2.3-->
-					    <div class="example-2 card">
-					      <div class="wrapper"  style="background-image: url('../images/filmovi/film3.jpg');background-repeat:no-repeat; background-size:cover;background-position:center">
-					        <div class="header">
-					          <div class="trajanje">
-					            <span>Trajanje: 107’ </span>
-					           </div>
-					          <ul class="menu-content">
-					            <li><a href="#" class="fa fa-heart-o"></a></li>
-					          </ul>
-					        </div>
-					        <div class="data">
-					          <div class="content">
-					            <span class="author">Andjeli nose belo</span>
-					            <h1 class="title"><a href="#">Agape</a></h1>
-					            <p class="text"> <strong> Uloge:</strong> Vicky Chen, Zhou Meijun, Shi Ke, Geng Le, Liu Weiwei, Peng Jing, Wang Yuexin, Li Mengnan</p>
-					            <a href="#" class="button">Prikazi vise</a>
-					          </div>
-					        </div>
-					      </div>
-					    </div>
+				    <!--CARD 2.3-->
+				    <div class="example-2 card">
+				      <div class="wrapper"  style="background-image: url('../images/filmovi/film3.jpg');background-repeat:no-repeat; background-size:cover;background-position:center">
+				        <div class="header">
+				          <div class="trajanje">
+				            <span>Trajanje: 107’ </span>
+				           </div>
+				          <ul class="menu-content">
+				            <li><p href="#" class="fa fa-bookmark-o"><span id="film_rez_3">2</span></p></li>
+				          </ul>
+				        </div>
+				        <div class="data">
+				          <div class="content">
+				            <span class="author">Dan Gilroy</span>
+				            <h1 class="title"><a href="2.1.3 film.html">Advokat</a></h1>
+				            <p class="text"> <strong> Uloge:</strong> Denzel Washington, Colin Farrell, Carmen Ejogo</p>
+				            <a href="2.1.3 film.html" class="button">Prikaži više</a>
+				          </div>
+				        </div>
+				      </div>
+				    </div>
 				</div>
-					     <!--CARD 2.4-->
+				<!--CARD 2.4-->
 				<div class="col-12 col-md-6">
-					    <div class="example-2 card">
-					      <div class="wrapper"  style="background-image: url('../images/filmovi/film4.jpg');background-repeat:no-repeat; background-size:cover;background-position:center">
-					        <div class="header">
-					          <div class="trajanje">
-					            <span>Trajanje: 104’ </span>
-					          </div>
-					          <ul class="menu-content">
-					            <li><a href="#" class="fa fa-heart-o"></a></li>
-					          </ul>
-					        </div>
-					        <div class="data">
-					          <div class="content">
-					            <span class="author">Márta Mészáros</span>
-					            <h1 class="title"><a href="#">Aurora Borealis: Severna svetlost</a></h1>
-					            <p class="text"> <strong> Uloge:</strong> Mari Törőcsik, Franciska Törőcsik, Ildikó Tóth, Jákob Ladányi</p>
-					            <a href="#" class="button">Prikazi vise</a>
-					          </div>
-					        </div>
-					      </div>
-					    </div>
+				    <div class="example-2 card">
+				      <div class="wrapper"  style="background-image: url('../images/filmovi/film4.jpg');background-repeat:no-repeat; background-size:cover;background-position:center">
+				        <div class="header">
+				          <div class="trajanje">
+				            <span>Trajanje: 104’ </span>
+				          </div>
+				          <ul class="menu-content">
+				            <li><p href="#" class="fa fa-bookmark-o"><span id="film_rez_4">2</span></p></li>
+				          </ul>
+				        </div>
+				        <div class="data">
+				          <div class="content">
+				            <span class="author">Márta Mészáros</span>
+				            <h1 class="title"><a href="2.1.4 film.html">Aurora Borealis: Severna svetlost</a></h1>
+				            <p class="text"> <strong> Uloge:</strong> Mari Törőcsik, Franciska Törőcsik, Ildikó Tóth, Jákob Ladányi</p>
+				            <a href="2.1.4 film.html" class="button">Prikaži više</a>
+				          </div>
+				        </div>
+				      </div>
+				    </div>
 				</div>
-		
+				<!--CARD 2.5-->
+			    <div class="col-12 col-md-6">
+				    <div class="example-2 card">
+				      <div class="wrapper"  style="background-image: url('../images/filmovi/film5.jpg');background-repeat:no-repeat; background-size:cover;background-position:center">
+				        <div class="header">
+				          <div class="trajanje">
+				            <span style="color:white">Trajanje: 123’ </span>
+				          </div>
+				          <ul class="menu-content">
+				            <li><p href="#" class="fa fa-bookmark-o"><span id="film_rez_5">2</span></p></li>
+				          </ul>
+				        </div>
+				        <div class="data">
+				          <div class="content">
+				            <span class="author">Guillermo del Toro</span>
+				            <h1 class="title"><a href="2.1.5 film.html">Oblik vode</a></h1>
+				            <p class="text"> <strong> Uloge:</strong> Sally Hawkins, Doug Jones, Michael Shannon, Richard Jenkins, Octavia Spencer, Michael Stuhlbarg</p>
+				            <a href="2.1.5 film.html" class="button">Prikaži više</a>
+				          </div>
+				        </div>
+				      </div>
+				    </div>
+				</div>
+				<!--CARD 2.6-->
+				<div class="col-12 col-md-6">
+				    <div class="example-2 card">
+				      <div class="wrapper"  style="background-image: url('../images/filmovi/film6.jpg');background-repeat:no-repeat; background-size:cover;background-position:center">
+				        <div class="header">
+				          <div class="trajanje">
+				            <span style="color:white">Trajanje: 115’ </span>
+				          </div>
+				          <ul class="menu-content">
+				            <li><p href="#" class="fa fa-bookmark-o"><span id="film_rez_6">2</span></p></li>
+				          </ul>
+				        </div>
+				        <div class="data">
+				          <div class="content">
+				            <span class="author">Paul Thomas Anderson</span>
+				            <h1 class="title"><a href="2.1.6 film.html">Fantomska nit</a></h1>
+				            <p class="text"> <strong> Uloge:</strong> Daniel Day-Lewis, Vicky Krieps, Lesley Manville</p>
+				            <a href="2.1.6 film.html" class="button">Prikaži više</a>
+				          </div>
+				        </div>
+				      </div>
+				    </div>
+				</div>
 				</div>
 			</div>
 		</div>
