--- a/html/3 glumci.html
+++ b/html/3 glumci.html
@@ -8,6 +8,8 @@
 		
 		</script>
 		<title>FF - Glumci</title>
+		<link rel="icon" href="../images/circle-logo.png">
+		
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="../css/styles.css" type="text/css">
@@ -31,8 +33,8 @@
 				</div>
 				<div class="col-8 col-lg-10">
 					<br>
-					<h1 style="color:white;">Filmski festival</h1>
-					<h1 style="color:white;" >6.5-10.5</h1>
+					<h1 style="color:white; ">Filmski festival</h1>
+					<h3 style="color:white; " >1.6-2.6</h3>
 				</div>
 		</header>		
 				
@@ -52,7 +54,7 @@
 				<div class="collapse navbar-collapse navbar-center" id="collapsibleNavbar">
 					<ul class="navbar-nav mx-auto">
 						<li class="nav-item">
-							<a class="nav-link" href="index.html" ><h3>Pocetna</h3></a>
+							<a class="nav-link a-link" href="index.html" ><h3>Početna</h3></a>
 						</li>
 						
 						<li class="nav-item dropdown">
@@ -67,19 +69,19 @@
 						<li class="nav-item dropdown">
 							<a class="nav-link dropdown-toggle" id="program-dd" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="program.html"><h3>Program</h3></a>
 							<div class="dropdown-menu" aria-labelledby="program-dd">
-								 <a class="dropdown-item" href="2.1 filmovi.html">			<img src="../images/dropdown-icons/film-icon.png" width="25px">Filmovi</a>
-								 <a class="dropdown-item" href="2.2 mesta_projekcija.html">	<img src="../images/dropdown-icons/place-icon.png" width="25px">Mesta projekcija</a>
-								 <a class="dropdown-item" href="2.3 prodajna_mesta.html">	<img src="../images/dropdown-icons/ticket-icon.png" width="25px">Prodajna mesta</a>
-								 <a class="dropdown-item" href="2.4 prvidan.html">			<img src="../images/dropdown-icons/day1.png" width="25px">&nbsp;Dan</a>
-								 <a class="dropdown-item" href="2.5 drugidan.html"> 		<img src="../images/dropdown-icons/day2.png" width="25px">&nbsp;Dan</a>
-								 <a class="dropdown-item" href="2.6 trecidan.html"> 		<img src="../images/dropdown-icons/day3.png" width="25px">&nbsp;Dan</a>
+								 <a class="dropdown-item" href="2.1 filmovi.html">		<img src="../images/dropdown-icons/film-icon.png" width="25px">Filmovi</a>
+								 <a class="dropdown-item" href="2.2 mesta_projekcija.html">		<img src="../images/dropdown-icons/place-icon.png" width="25px">Mesta projekcija</a>
+								 <a class="dropdown-item" href="2.3 prodajna_mesta.html">		<img src="../images/dropdown-icons/ticket-icon.png" width="25px">Prodajna mesta</a>
 							</div>
 						</li>
-						<li class="nav-item active">
+						<li class="nav-item  active">
 							<a class="nav-link" href="3 glumci.html"><h3>Glumci</h3></a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="4 vesti.html"><h3>Vesti</h3></a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="5 mojifilmovi.html"><h3>Moji filmovi</h3></a>
 						</li>
 					</ul>
 				</div> 
@@ -94,78 +96,78 @@
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6 col-12 actor-card">
 					<div class="card">
-						<a href="glumac1.html">
-							<center><img class="card-img-top actor-img" src="../images/actor.jpg"></center>
+						<a href="3.1 glumac.html">
+							<center><img class="card-img-top actor-img" src="../images/glumci/glumac1.jpg"></center>
 						</a>
 						<div class="card-body">
 							<div class="card-text">
-								<center><i>Jovan Jovanovic</i></center>
-								<center>Kratka biografija ovog glumca, godiste, uloge...</center>
+								<center><Strong><i>Vudrou Trejsi „Vudi“ Harelson</i></Strong></center>
+								<center>(Midland, Teksas, 23. jul 1961) američki je glumac, aktivista i dramaturg</center>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6 col-12 actor-card">
 					<div class="card">
-						<a href="glumac2.html">
-							<center><img class="card-img-top actor-img" src="../images/actor.jpg"></center>
+						<a href="3.2 glumac.html">
+							<center><img class="card-img-top actor-img" src="../images/glumci/glumac2.jpg"></center>
 						</a>
 						<div class="card-body">
 							<div class="card-text">
-								<center><i>Jovan Jovanovic</i></center>
-								<center>Kratka biografija ovog glumca, godiste, uloge...</center>
+								<center><strong><i>Franses Makdormand</i></strong></center>
+								<center> američka je glumica, rođena 23. juna 1957. u Čikagu.</center>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6 col-12 actor-card">
 					<div class="card">
-						<a href="glumac3.html">
-							<center><img class="card-img-top actor-img" src="../images/actor.jpg"></center>
+						<a href="3.3 glumac.html">
+							<center><img class="card-img-top actor-img" src="../images/glumci/glumac3.jpg"></center>
 						</a>
 						<div class="card-body">
 							<div class="card-text">
-								<center><i>Jovan Jovanovic</i></center>
-								<center>Kratka biografija ovog glumca, godiste, uloge...</center>
+								<center><strong><i>Denzel Vošington</i></strong></center>
+								<center>američki je filmski glumac, reditelj i producent.</center>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6 col-12 actor-card">
 					<div class="card">
-						<a href="glumac4.html">
-							<center><img class="card-img-top actor-img" src="../images/actor.jpg"></center>
+						<a href="3.4 glumac.html">
+							<center><img class="card-img-top actor-img" src="../images/glumci/glumac4.jpg"></center>
 						</a>
 						<div class="card-body">
 							<div class="card-text">
-								<center><i>Jovan Jovanovic</i></center>
-								<center>Kratka biografija ovog glumca, godiste, uloge...</center>
+								<center><strong><i>Sali Hokins</i></strong></center>
+								<center>(27. april 1976.) britanska je glumica.</center>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6 col-12 actor-card">
 					<div class="card">
-						<a href="glumac5.html">
-							<center><img class="card-img-top actor-img" src="../images/actor.jpg"></center>
+						<a href="3.5 glumac.html">
+							<center><img class="card-img-top actor-img" src="../images/glumci/glumac5.jpg"></center>
 						</a>
 						<div class="card-body">
 							<div class="card-text">
-								<center><i>Jovan Jovanovic</i></center>
-								<center>Kratka biografija ovog glumca, godiste, uloge...</center>
+								<center><strong><i>Ser Danijel Dej-Luis</i></strong></center>
+								<center>(29. april 1957) englesko-irski je glumac.</center>
 							</div>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-4 col-sm-6 col-12 actor-card">
 					<div class="card">
-						<a href="glumac6.html">
-							<center><img class="card-img-top actor-img" src="../images/actor.jpg"></center>
+						<a href="3.6 glumac.html">
+							<center><img class="card-img-top actor-img" src="../images/glumci/glumac6.jpg"></center>
 						</a>
 						<div class="card-body">
 							<div class="card-text">
-								<center><i>Jovan Jovanovic</i></center>
-								<center>Kratka biografija ovog glumca, godiste, uloge...</center>
+								<center><strong><i>Kolin Džejms Farel</i></strong></center>
+								<center>(Dablin, 31. maj 1976) irski je glumac.</center>
 							</div>
 						</div>
 					</div>
