--- a/html/neaktivne/3.1 glumac1.html
+++ b/html/neaktivne/3.1 glumac1.html
@@ -7,7 +7,7 @@
 		}
 		
 		</script>
-		<title>FF - Glumci</title>
+		<title>FF - Denzel Vošington</title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet" href="../css/styles.css" type="text/css">
@@ -78,8 +78,8 @@
 			<div class="row">
 				<div class="col-12">
 					<ul class="breadcrumb">
-						<li class="breadcrumb-item"><a href="glumci.html" class="breadcrumb-link">Glumci</a></li>
-						<li class="breadcrumb-item active">Glumac1</li>
+						<li class="breadcrumb-item"><a href="3 glumci.html" class="breadcrumb-link">Glumci</a></li>
+						<li class="breadcrumb-item active">Denzel Vošington</li>
 					</ul>
 				</div>
 			</div>
@@ -87,7 +87,7 @@
 					<div class="media actor-media">
 						<div class="col-3 col-lg-6">
 						<div class="media-left">
-							<img class="alone-actor-img rounded-circle" src="../images/actor.jpg">
+							<img class="alone-actor-img rounded-circle" src="../images/glumci/glumac3.jpg">
 						</div>
 						</div>
 						<div class="col-9 col-lg-6">
@@ -95,18 +95,16 @@
 							<div class="media-text">
 								<center>
 								
-									<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-									Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-									Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-									Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+									<p class="paragraph">
+										<strong>Denzel Vošington</strong>
+										    je rođen u Maunt Vernonu (Njujork). Njegov otac je bio sveštenik, a majka vlasnica frizerskog salona. Kad je bio dečak, roditelji su mu zabranili da gleda filmove. Kasnije je imao problema sa zakonom i bio je pritvoren sa nekoliko svojih drugova. Majka ga tada šalje u probnu školu, a kasnije i na Univerzitet Fordam, gde je otkrio svoj glumački talenat i na kojem je 1977. godine diplomirao.
 									</p>
 									<hr>
-									<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-									Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-									Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-									Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+									<p class="paragraph">Njegova prva uloga je bila u TV filmu Vilma. U toku snimanja tog filma upoznao se sa Poletom Pirson (sada Poleta Vošington) sa kojom se kasnije venčao. Na sebe je skrenuo pažnju javnosti glumeći u TV drami St. Elsewhere, a jedan je od retkih glumaca koji je ostao do kraja te serije u njenom šestogodišnjom trajanju. Kasnije dobija ulogu u filmu Slava za koju je 1989. godine dobio Oskara za sporednu mušku ulogu.
 									</p>
-								
+									<p class="paragraph">
+										Nakon tog filma njegova popularnost raste i dobija sve bolje uloge u filmovima kao što su: Malkom Iks (1992), Filadelfija (1993), Posrnuli (1998), Sakupljač kostiju (1999) i Dan obuke (2001) kada dobija svog drugog Oskara, ovog puta za glavnu mušku ulogu.
+									</p>
 								</center>
 							</div>
 						</div>
